unpackaged/main/default/objects/sked_Resource_Hours_Record_Detail__c/fields/sked_Duration__c.field-meta.xml
<CustomField>
    <fullName>sked_Duration__c</fullName>
    <label>Duration</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>