unpackaged/main/default/objects/sked_Resource_Hours_Record_Detail__c/fields/sked_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_End_Date__c</fullName>
    <formula>IF ( sked_Resource_Hours_Record__r.sked_End_Date__c &lt; sked_Event_End_Date__c, sked_Resource_Hours_Record__r.sked_End_Date__c, sked_Event_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>