unpackaged/main/default/objects/sked_Resource_Hours_Record_Detail__c/fields/sked_Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Event_Start_Date__c</fullName>
    <formula>IF(
 NOT(ISBLANK( sked_Activity__c )),
 sked_Activity__r.sked_Start_Date__c,
 IF (
  NOT(ISBLANK( sked_Activity_Resource__c )),
  sked_Activity_Resource__r.sked_Start_Date__c,
  IF (
   NOT(ISBLANK( sked_Availability__c )),
   sked_Availability__r.sked_Start_Date__c,
   IF (
    NOT(ISBLANK( sked_Job_Allocation__c )),
    sked_Job_Allocation__r.sked_Start_Date__c,
    NULL
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>