unpackaged/main/default/objects/sked_Resource_Hours_Record_Detail__c/fields/sked_Job__c.field-meta.xml
<CustomField>
    <fullName>sked_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Resource Hours Record	Details</relationshipLabel>
    <relationshipName>sked_Resource_Hours_Record_Details</relationshipName>
    <type>Lookup</type>
</CustomField>