unpackaged/main/default/objects/sked_Resource_Hours_Record_Detail__c/fields/sked_Resource_Hours_Record__c.field-meta.xml
<CustomField>
    <fullName>sked_Resource_Hours_Record__c</fullName>
    <label>Resource Hours Record</label>
    <referenceTo>sked_Resource_Hours_Record__c</referenceTo>
    <relationshipLabel>Resource Hours Record	Details</relationshipLabel>
    <relationshipName>sked_Resource_Hours_Record_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>